--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,4 @@
 [build]
-  Functions = "functions"
-  command = "yarn run build"
-  publish = "dist"
-  environment = { NODE_VERSION = "8.9.0" }
-
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 404
+  command = "npm build" 
+  functions = "built-lambda" 
+  publish = "build" 
